Fixed #content-wrap's padding.

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ footer {
 }
   
 #content-wrap {
-    padding-bottom: 100px;
+    padding-bottom: 150px;
     background-color: #ffffff;
     max-width: 80%;
     margin: 0 auto;
